[package]
name = "myproxy"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
byteorder = "1.3.2"
httparse = "1.3.4"

[dependencies.futures-preview]
version = "=0.3.0-alpha.19"
features = ["async-await"]

[dependencies.async-std]
version = "0.99"
# features = ["unstable"]