[package]
name = "miniproxy"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
edition = "2018"

[[bin]]
name = "minilocal"
path = "src/bin/local.rs"

[[bin]]
name = "miniserver"
path = "src/bin/server.rs"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.4.1"

[dependencies]
byteorder = "1.3.2"
httparse = "1.3.4"
serde = {version = "1.0.0", features=["derive"]}
serde_json = "1.0.0"
log = "0.4.0"
env_logger = "0.7.1"
clap = "2.33.0"
base64 = "0.11.0"
rand = "0.7.2"

[dependencies.futures-preview]
version = "=0.3.0-alpha.19"
features = ["async-await"]

[dependencies.async-std]
version = "0.99"
features = ["unstable"]

